* Now compiling with Java 11 compatibility * Reworked data store access since the API has broken in different part   . Some stuff could be better but would need Java 21. Still a long wait for it